<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"></include>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/tela_form"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:id="@+id/infos_principais">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/imagem_do_usuario"
            android:src="@drawable/ico_usuario" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nome"
            style="@style/label.h5"
            android:gravity="left"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jonão da Silba"
            style="@style/label.h3"
            android:gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            style="@style/label.h5"
            android:gravity="left"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="jonao@silba.mail"
            style="@style/label.h3"
            android:gravity="left"/>

        <Button
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            style="@style/btns_simples"
            android:onClick="onClickEditarPerfil"/>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gold"
            style="@style/well"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alterar_plano"
            style="@style/btns_simples"
            android:onClick="onClickAlterarPlano"/>

    </LinearLayout>



</RelativeLayout>
